--- a/admin.html
+++ b/admin.html
@@ -52,6 +52,7 @@
         <thead>
           <tr>
             <th>Name</th>
+            <th>Phone</th>
             <th>RSVP</th>
             <th>Party</th>
             <th>Dietary</th>
